tests/neg/float.fq
// adapted from LH test Propability.hs

bind 50 x : {v1 : real | [(v1 = 0.2)]}
bind 56 y : {v2 : real | [(v2 = 0.9 + x)]}

constraint:
  env [50;
       56]
  lhs {VV#F3 : real | []}
  rhs {VV#F3 : real | [(y = 1.0)]}
  id 3 tag [1]
